--- a/package.json
+++ b/package.json
@@ -33,5 +33,7 @@
 		"nunjucks": "^3.1.3",
 		"popper.js": "^1.14.3"
 	},
-	"dependencies": {}
+	"dependencies": {
+		"bootstrap-select": "^1.13.1"
+	}
 }
