--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
 	},
 	"homepage": "https://github.com/t485/beta#readme",
 	"devDependencies": {
-		"bootstrap": "^4.1.1",
-		"browser-sync": "^2.24.4",
+		"bootstrap": "^4.1.3",
+		"browser-sync": "^2.24.7",
 		"del": "^3.0.0",
 		"gulp": "git+https://github.com/gulpjs/gulp.git#4.0",
 		"gulp-changed": "^3.2.0",
@@ -31,9 +31,10 @@
 		"jquery": "^3.3.1",
 		"merge-stream": "^1.0.1",
 		"nunjucks": "^3.1.3",
-		"popper.js": "^1.14.3"
+		"popper.js": "^1.14.4"
 	},
 	"dependencies": {
-		"bootstrap-select": "^1.13.1"
+		"bootstrap-select": "^1.13.2",
+		"list.js": "^1.5.0"
 	}
 }
